---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: YYYY-MM-DD
  Minor Features:
    - Shortcut button will now be disabled when not usable.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2023-03-20
  Bugfixes:
    - Fix issue with message printing crashing the game.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2023-03-20
  Features:
    - A new shortcut button to invoke the toggle feature.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-03-19
  Major Features:
    - Initial release of mod.
    - Adds the /biter-expansion [enable|disable|toggle] command to check or control biter expansion.
    - Adds map setting to control whether expansion can be disabled.